set(QMUD_TEST_DEFAULT_ENVIRONMENT
        "QT_QPA_PLATFORM=offscreen"
        "LANG=C.UTF-8"
        "LC_ALL=C.UTF-8"
        "TZ=UTC")

function(qmud_add_qtest target_name)
    set(options GUI)
    set(one_value_args TIMEOUT)
    set(multi_value_args SOURCES LIBRARIES LABELS)
    cmake_parse_arguments(QMUD_QTEST "${options}" "${one_value_args}" "${multi_value_args}" ${ARGN})

    if (NOT QMUD_QTEST_SOURCES)
        message(FATAL_ERROR "qmud_add_qtest(${target_name}) requires SOURCES")
    endif ()

    add_executable(${target_name} ${QMUD_QTEST_SOURCES})
    set_target_properties(${target_name} PROPERTIES AUTOMOC ON)
    target_compile_definitions(${target_name}
            PRIVATE
            QMUD_TEST_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
    target_link_libraries(${target_name}
            PRIVATE
            Qt6::Core
            Qt6::Test
            ${QMUD_QTEST_LIBRARIES})
    target_include_directories(${target_name}
            PRIVATE
            "${CMAKE_SOURCE_DIR}/src"
            "${CMAKE_SOURCE_DIR}/src/helpers"
            "${CMAKE_CURRENT_SOURCE_DIR}/support")

    if (QMUD_QTEST_GUI)
        target_link_libraries(${target_name} PRIVATE Qt6::Widgets)
    endif ()

    add_test(NAME ${target_name} COMMAND ${target_name})

    set(test_labels "${QMUD_QTEST_LABELS}")
    if (NOT test_labels)
        set(test_labels "unit")
    endif ()
    if (QMUD_QTEST_GUI)
        list(APPEND test_labels "gui")
    endif ()
    list(REMOVE_DUPLICATES test_labels)

    set(test_timeout "${QMUD_QTEST_TIMEOUT}")
    if (NOT test_timeout)
        set(test_timeout 30)
    endif ()

    set_tests_properties(${target_name}
            PROPERTIES
            LABELS "${test_labels}"
            TIMEOUT "${test_timeout}"
            ENVIRONMENT "${QMUD_TEST_DEFAULT_ENVIRONMENT}")
endfunction()

add_library(qmud_test_support STATIC
        support/TestEnvironment.cpp
        support/TelnetCallbackSpy.cpp)
target_link_libraries(qmud_test_support PUBLIC Qt6::Core)
target_include_directories(qmud_test_support
        PUBLIC
        "${CMAKE_CURRENT_SOURCE_DIR}/support"
        "${CMAKE_SOURCE_DIR}/src"
        "${CMAKE_SOURCE_DIR}/src/helpers")

qmud_add_qtest(tst_QTestSmoke
        SOURCES
        smoke/tst_QTestSmoke.cpp
        LIBRARIES
        qmud_test_support
        LABELS
        unit
        smoke
        TIMEOUT
        10)

qmud_add_qtest(tst_StringUtils
        SOURCES
        unit/tst_StringUtils.cpp
        "${CMAKE_SOURCE_DIR}/src/helpers/StringUtils.cpp"
        "${CMAKE_SOURCE_DIR}/src/Accelerators.cpp"
        LABELS
        unit)

qmud_add_qtest(tst_EncodingUtils
        SOURCES
        unit/tst_EncodingUtils.cpp
        "${CMAKE_SOURCE_DIR}/src/helpers/EncodingUtils.cpp"
        LABELS
        unit)

qmud_add_qtest(tst_OutputWrapUtils
        SOURCES
        unit/tst_OutputWrapUtils.cpp
        "${CMAKE_SOURCE_DIR}/src/helpers/OutputWrapUtils.cpp"
        LIBRARIES
        Qt6::Gui
        LABELS
        unit)

qmud_add_qtest(tst_AccessibleTextUtils
        SOURCES
        unit/tst_AccessibleTextUtils.cpp
        "${CMAKE_SOURCE_DIR}/src/helpers/AccessibleTextUtils.cpp"
        LABELS
        unit)

qmud_add_qtest(tst_PluginPathUtils
        SOURCES
        unit/tst_PluginPathUtils.cpp
        "${CMAKE_SOURCE_DIR}/src/helpers/PluginPathUtils.cpp"
        LABELS
        unit)

qmud_add_qtest(tst_HyperlinkActionUtils
        SOURCES
        unit/tst_HyperlinkActionUtils.cpp
        "${CMAKE_SOURCE_DIR}/src/helpers/HyperlinkActionUtils.cpp"
        LIBRARIES
        Qt6::Gui
        LABELS
        unit)

qmud_add_qtest(tst_MiniWindowUtils
        SOURCES
        unit/tst_MiniWindowUtils.cpp
        "${CMAKE_SOURCE_DIR}/src/helpers/MiniWindowUtils.cpp"
        "${CMAKE_SOURCE_DIR}/src/helpers/FontUtils.cpp"
        LIBRARIES
        Qt6::Gui
        LABELS
        unit)

qmud_add_qtest(tst_Environment
        SOURCES
        unit/tst_Environment.cpp
        "${CMAKE_SOURCE_DIR}/src/Environment.cpp"
        LABELS
        unit)

qmud_add_qtest(tst_TimeFormatUtils
        SOURCES
        unit/tst_TimeFormatUtils.cpp
        "${CMAKE_SOURCE_DIR}/src/helpers/TimeFormatUtils.cpp"
        LABELS
        unit)

qmud_add_qtest(tst_TraceDispatchUtils
        SOURCES
        unit/tst_TraceDispatchUtils.cpp
        "${CMAKE_SOURCE_DIR}/src/helpers/TraceDispatchUtils.cpp"
        LABELS
        unit)

qmud_add_qtest(tst_ScriptErrorRoutingUtils
        SOURCES
        unit/tst_ScriptErrorRoutingUtils.cpp
        "${CMAKE_SOURCE_DIR}/src/helpers/WorldCommandProcessorUtils.cpp"
        LABELS
        unit)

qmud_add_qtest(tst_TtsEngine
        SOURCES
        unit/tst_TtsEngine.cpp
        "${CMAKE_SOURCE_DIR}/src/TtsEngine.cpp"
        LIBRARIES
        ${QMUD_QT_TEXTTOSPEECH_TARGET}
        LABELS
        unit)
target_compile_definitions(tst_TtsEngine
        PRIVATE
        QMUD_ENABLE_TEXT_TO_SPEECH=${QMUD_ENABLE_TEXT_TO_SPEECH_VALUE})

if (QMUD_ENABLE_LUA_SCRIPTING)
    qmud_add_qtest(tst_LuaExecution
            SOURCES
            unit/tst_LuaExecution.cpp
            "${CMAKE_SOURCE_DIR}/src/helpers/LuaExecutionUtils.cpp"
            "${CMAKE_SOURCE_DIR}/src/LuaExecutorWorker.cpp"
            "${CMAKE_SOURCE_DIR}/src/LuaSupport.cpp"
            "${CMAKE_SOURCE_DIR}/src/Sqlite3Lua.cpp"
            "${CMAKE_SOURCE_DIR}/src/Environment.cpp"
            LIBRARIES
            ${LUA_LIBRARIES}
            Qt6::Sql
            LABELS
            unit)
    if (TARGET Lua::Lua)
        target_link_libraries(tst_LuaExecution PRIVATE Lua::Lua)
    endif ()
    if (DEFINED LUA_INCLUDE_DIR)
        target_include_directories(tst_LuaExecution SYSTEM BEFORE PRIVATE ${LUA_INCLUDE_DIR})
    elseif (DEFINED LUA_INCLUDE_DIRS)
        target_include_directories(tst_LuaExecution SYSTEM BEFORE PRIVATE ${LUA_INCLUDE_DIRS})
    endif ()
    target_compile_definitions(tst_LuaExecution PRIVATE QMUD_ENABLE_LUA_SCRIPTING)

    qmud_add_qtest(tst_LuaCallbackEngine
            SOURCES
            unit/tst_LuaCallbackEngine.cpp
            "${CMAKE_SOURCE_DIR}/src/WorldRuntime.h"
            "${CMAKE_SOURCE_DIR}/src/LuaCallbackEngine.cpp"
            "${CMAKE_SOURCE_DIR}/src/LuaExecutor.cpp"
            "${CMAKE_SOURCE_DIR}/src/LuaExecutorWorker.cpp"
            "${CMAKE_SOURCE_DIR}/src/LuaSupport.cpp"
            "${CMAKE_SOURCE_DIR}/src/LuaLuacomShim.cpp"
            "${CMAKE_SOURCE_DIR}/src/TtsEngine.cpp"
            "${CMAKE_SOURCE_DIR}/src/Sqlite3Lua.cpp"
            "${CMAKE_SOURCE_DIR}/src/Environment.cpp"
            "${CMAKE_SOURCE_DIR}/src/helpers/LuaExecutionUtils.cpp"
            "${CMAKE_SOURCE_DIR}/src/helpers/PluginPathUtils.cpp"
            LIBRARIES
            ${LUA_LIBRARIES}
            Qt6::Gui
            Qt6::Widgets
            Qt6::Network
            Qt6::Sql
            ${QMUD_QT_TEXTTOSPEECH_TARGET}
            LABELS
            unit)
    if (TARGET Lua::Lua)
        target_link_libraries(tst_LuaCallbackEngine PRIVATE Lua::Lua)
    endif ()
    if (DEFINED LUA_INCLUDE_DIR)
        target_include_directories(tst_LuaCallbackEngine SYSTEM BEFORE PRIVATE ${LUA_INCLUDE_DIR})
    elseif (DEFINED LUA_INCLUDE_DIRS)
        target_include_directories(tst_LuaCallbackEngine SYSTEM BEFORE PRIVATE ${LUA_INCLUDE_DIRS})
    endif ()
    target_compile_definitions(tst_LuaCallbackEngine
            PRIVATE
            QMUD_ENABLE_LUA_SCRIPTING
            QMUD_LUACALLBACKENGINE_TEST_MINIMAL_BINDINGS
            QMUD_ENABLE_TEXT_TO_SPEECH=${QMUD_ENABLE_TEXT_TO_SPEECH_VALUE})
    target_compile_options(tst_LuaCallbackEngine PRIVATE -ffunction-sections -fdata-sections)
    target_link_options(tst_LuaCallbackEngine PRIVATE -Wl,--gc-sections)

    qmud_add_qtest(tst_LuaLuacomShim
            SOURCES
            unit/tst_LuaLuacomShim.cpp
            "${CMAKE_SOURCE_DIR}/src/TtsEngine.cpp"
            "${CMAKE_SOURCE_DIR}/src/LuaLuacomShim.cpp"
            LIBRARIES
            ${LUA_LIBRARIES}
            ${QMUD_QT_TEXTTOSPEECH_TARGET}
            LABELS
            unit)
    if (TARGET Lua::Lua)
        target_link_libraries(tst_LuaLuacomShim PRIVATE Lua::Lua)
    endif ()
    if (DEFINED LUA_INCLUDE_DIR)
        target_include_directories(tst_LuaLuacomShim SYSTEM BEFORE PRIVATE ${LUA_INCLUDE_DIR})
    elseif (DEFINED LUA_INCLUDE_DIRS)
        target_include_directories(tst_LuaLuacomShim SYSTEM BEFORE PRIVATE ${LUA_INCLUDE_DIRS})
    endif ()
    target_compile_definitions(tst_LuaLuacomShim
            PRIVATE
            QMUD_ENABLE_TEXT_TO_SPEECH=${QMUD_ENABLE_TEXT_TO_SPEECH_VALUE})

endif ()

qmud_add_qtest(tst_UpdateCheckUtils
        SOURCES
        unit/tst_UpdateCheckUtils.cpp
        "${CMAKE_SOURCE_DIR}/src/helpers/UpdateCheckUtils.cpp"
        LABELS
        unit)

qmud_add_qtest(tst_WorldSessionStateUtils
        GUI
        SOURCES
        unit/tst_WorldSessionStateUtils.cpp
        "${CMAKE_SOURCE_DIR}/src/helpers/WorldSessionStateUtils.cpp"
        LABELS
        unit)

qmud_add_qtest(tst_WorldSessionRestoreFlowUtils
        SOURCES
        unit/tst_WorldSessionRestoreFlowUtils.cpp
        "${CMAKE_SOURCE_DIR}/src/helpers/WorldSessionRestoreFlowUtils.cpp"
        LABELS
        unit)

qmud_add_qtest(tst_ReloadUnit
        SOURCES
        unit/tst_ReloadUnit.cpp
        "${CMAKE_SOURCE_DIR}/src/helpers/ReloadUtils.cpp"
        LABELS
        unit)

qmud_add_qtest(tst_AnsiSgrParseUtils
        SOURCES
        unit/tst_AnsiSgrParseUtils.cpp
        "${CMAKE_SOURCE_DIR}/src/helpers/AnsiSgrParseUtils.cpp"
        LABELS
        unit)

qmud_add_qtest(tst_ColorUtils
        SOURCES
        unit/tst_ColorUtils.cpp
        "${CMAKE_SOURCE_DIR}/src/helpers/ColorUtils.cpp"
        LABELS
        unit)

qmud_add_qtest(tst_FontUtils
        GUI
        SOURCES
        unit/tst_FontUtils.cpp
        "${CMAKE_SOURCE_DIR}/src/helpers/FontUtils.cpp"
        LABELS
        unit)

qmud_add_qtest(tst_AcceleratorUtils
        GUI
        SOURCES
        unit/tst_AcceleratorUtils.cpp
        "${CMAKE_SOURCE_DIR}/src/helpers/AcceleratorUtils.cpp"
        LABELS
        unit)

qmud_add_qtest(tst_MainFrameMdiUtils
        GUI
        SOURCES
        unit/tst_MainFrameMdiUtils.cpp
        "${CMAKE_SOURCE_DIR}/src/helpers/MainFrameMdiUtils.cpp"
        LABELS
        unit)

qmud_add_qtest(tst_BraceMatch
        GUI
        SOURCES
        unit/tst_BraceMatch.cpp
        "${CMAKE_SOURCE_DIR}/src/BraceMatch.cpp"
        LABELS
        unit)

qmud_add_qtest(tst_WorldOptions
        SOURCES
        unit/tst_WorldOptions.cpp
        "${CMAKE_SOURCE_DIR}/src/WorldOptions.cpp"
        LABELS
        unit)

qmud_add_qtest(tst_ImportMergeUtils
        SOURCES
        unit/tst_ImportMergeUtils.cpp
        LABELS
        unit)

qmud_add_qtest(tst_WorldOptionDefaults
        SOURCES
        unit/tst_WorldOptionDefaults.cpp
        "${CMAKE_SOURCE_DIR}/src/WorldOptionDefaults.cpp"
        "${CMAKE_SOURCE_DIR}/src/helpers/StringUtils.cpp"
        "${CMAKE_SOURCE_DIR}/src/Accelerators.cpp"
        LABELS
        unit)

qmud_add_qtest(tst_PluginCallbackCatalogUtils
        SOURCES
        unit/tst_PluginCallbackCatalogUtils.cpp
        LABELS
        unit)

qmud_add_qtest(tst_MemoryImageDecodeCacheUtils
        GUI
        SOURCES
        unit/tst_MemoryImageDecodeCacheUtils.cpp
        LABELS
        unit)

qmud_add_qtest(tst_LuaUtf8Utils
        SOURCES
        unit/tst_LuaUtf8Utils.cpp
        LABELS
        unit)

qmud_add_qtest(tst_WorldRuntimeAttributeUtils
        SOURCES
        unit/tst_WorldRuntimeAttributeUtils.cpp
        LABELS
        unit)

qmud_add_qtest(tst_StartTlsFallbackUtils
        SOURCES
        unit/tst_StartTlsFallbackUtils.cpp
        LABELS
        unit)

qmud_add_qtest(tst_WorldRuleEnableUtils
        SOURCES
        unit/tst_WorldRuleEnableUtils.cpp
        LABELS
        unit)

qmud_add_qtest(tst_PluginBroadcastSelectionUtils
        SOURCES
        unit/tst_PluginBroadcastSelectionUtils.cpp
        LABELS
        unit)

qmud_add_qtest(tst_DoubleMetaphone
        SOURCES
        unit/tst_DoubleMetaphone.cpp
        "${CMAKE_SOURCE_DIR}/src/DoubleMetaphone.cpp"
        LABELS
        unit)

qmud_add_qtest(tst_AsciiArt
        SOURCES
        unit/tst_AsciiArt.cpp
        "${CMAKE_SOURCE_DIR}/src/AsciiArt.cpp"
        LABELS
        unit)

qmud_add_qtest(tst_RegexCompat
        SOURCES
        regression/tst_RegexCompat.cpp
        LABELS
        integration
        regression
        TIMEOUT
        15)

qmud_add_qtest(tst_TelnetProcessor_Options
        SOURCES
        integration/tst_TelnetProcessor_Options.cpp
        "${CMAKE_SOURCE_DIR}/src/TelnetProcessor.cpp"
        LIBRARIES
        qmud_test_support
        ${QMUD_ZLIB_TARGET}
        LABELS
        integration
        TIMEOUT
        20)

qmud_add_qtest(tst_TelnetProcessor_Mxp
        SOURCES
        integration/tst_TelnetProcessor_Mxp.cpp
        "${CMAKE_SOURCE_DIR}/src/TelnetProcessor.cpp"
        LIBRARIES
        qmud_test_support
        ${QMUD_ZLIB_TARGET}
        LABELS
        integration
        TIMEOUT
        20)

qmud_add_qtest(tst_TelnetProcessor_Subnegotiation
        SOURCES
        integration/tst_TelnetProcessor_Subnegotiation.cpp
        "${CMAKE_SOURCE_DIR}/src/TelnetProcessor.cpp"
        LIBRARIES
        qmud_test_support
        ${QMUD_ZLIB_TARGET}
        LABELS
        integration
        TIMEOUT
        20)

qmud_add_qtest(tst_TelnetProcessor_Encoding
        SOURCES
        integration/tst_TelnetProcessor_Encoding.cpp
        "${CMAKE_SOURCE_DIR}/src/TelnetProcessor.cpp"
        LIBRARIES
        qmud_test_support
        ${QMUD_ZLIB_TARGET}
        LABELS
        integration
        TIMEOUT
        20)

qmud_add_qtest(tst_TelnetProcessor_Compression
        SOURCES
        integration/tst_TelnetProcessor_Compression.cpp
        "${CMAKE_SOURCE_DIR}/src/TelnetProcessor.cpp"
        LIBRARIES
        qmud_test_support
        ${QMUD_ZLIB_TARGET}
        LABELS
        integration
        TIMEOUT
        20)

qmud_add_qtest(tst_TelnetProcessor_Malformed
        SOURCES
        integration/tst_TelnetProcessor_Malformed.cpp
        "${CMAKE_SOURCE_DIR}/src/TelnetProcessor.cpp"
        LIBRARIES
        qmud_test_support
        ${QMUD_ZLIB_TARGET}
        LABELS
        integration
        regression
        TIMEOUT
        20)

qmud_add_qtest(tst_ReloadIntegration
        SOURCES
        integration/tst_ReloadIntegration.cpp
        "${CMAKE_SOURCE_DIR}/src/helpers/ReloadUtils.cpp"
        LABELS
        integration
        TIMEOUT
        20)

qmud_add_qtest(tst_LuaBridgeDispatcherIntegration
        SOURCES
        integration/tst_LuaBridgeDispatcherIntegration.cpp
        "${CMAKE_SOURCE_DIR}/src/helpers/LuaExecutionUtils.cpp"
        LABELS
        integration
        TIMEOUT
        90)

qmud_add_qtest(tst_WorldSocket_KeepAlive
        SOURCES
        integration/tst_WorldSocket_KeepAlive.cpp
        "${CMAKE_SOURCE_DIR}/src/WorldSocketService.h"
        "${CMAKE_SOURCE_DIR}/src/WorldSocket.cpp"
        LIBRARIES
        Qt6::Network
        LABELS
        integration
        TIMEOUT
        20)

qmud_add_qtest(tst_WorldDocument_Load
        SOURCES
        integration/tst_WorldDocument_Load.cpp
        "${CMAKE_SOURCE_DIR}/src/WorldDocument.cpp"
        LIBRARIES
        qmud_test_support
        LABELS
        integration
        TIMEOUT
        20)

qmud_add_qtest(tst_WorldDocument_Masks
        SOURCES
        integration/tst_WorldDocument_Masks.cpp
        "${CMAKE_SOURCE_DIR}/src/WorldDocument.cpp"
        LIBRARIES
        qmud_test_support
        LABELS
        integration
        TIMEOUT
        20)

qmud_add_qtest(tst_WorldDocument_Includes
        SOURCES
        integration/tst_WorldDocument_Includes.cpp
        "${CMAKE_SOURCE_DIR}/src/WorldDocument.cpp"
        LIBRARIES
        qmud_test_support
        LABELS
        integration
        TIMEOUT
        20)

qmud_add_qtest(tst_WorldDocument_RoundTrip
        SOURCES
        integration/tst_WorldDocument_RoundTrip.cpp
        "${CMAKE_SOURCE_DIR}/src/WorldDocument.cpp"
        LIBRARIES
        qmud_test_support
        LABELS
        integration
        TIMEOUT
        20)

qmud_add_qtest(tst_WorldCommandProcessor_Speedwalk
        SOURCES
        integration/tst_WorldCommandProcessor_Speedwalk.cpp
        "${CMAKE_SOURCE_DIR}/src/SpeedwalkParser.cpp"
        LABELS
        integration
        TIMEOUT
        20)

qmud_add_qtest(tst_WorldCommandProcessor_Alias
        SOURCES
        integration/tst_WorldCommandProcessor_Alias.cpp
        "${CMAKE_SOURCE_DIR}/src/helpers/AliasMatchUtils.cpp"
        "${CMAKE_SOURCE_DIR}/src/helpers/WorldCommandProcessorUtils.cpp"
        LABELS
        integration
        TIMEOUT
        20)

qmud_add_qtest(tst_WorldCommandProcessor_Regex
        SOURCES
        integration/tst_WorldCommandProcessor_Regex.cpp
        "${CMAKE_SOURCE_DIR}/src/helpers/WorldCommandProcessorUtils.cpp"
        LABELS
        integration
        TIMEOUT
        20)

qmud_add_qtest(tst_WorldCommandProcessor_SendTargets
        SOURCES
        integration/tst_WorldCommandProcessor_SendTargets.cpp
        "${CMAKE_SOURCE_DIR}/src/helpers/WorldCommandProcessorUtils.cpp"
        LABELS
        integration
        TIMEOUT
        20)

qmud_add_qtest(tst_WorldCommandProcessor_Queueing
        SOURCES
        integration/tst_WorldCommandProcessor_Queueing.cpp
        "${CMAKE_SOURCE_DIR}/src/helpers/WorldCommandProcessorUtils.cpp"
        LABELS
        integration
        TIMEOUT
        20)

qmud_add_qtest(tst_WorldCommandProcessor_TimerAccounting
        GUI
        SOURCES
        integration/tst_WorldCommandProcessor_TimerAccounting.cpp
        "${CMAKE_SOURCE_DIR}/src/helpers/TimerSchedulingUtils.cpp"
        LABELS
        integration
        TIMEOUT
        20)

if (QMUD_ENABLE_GUI_TESTS)
    qmud_add_qtest(tst_MainFrame_Actions
            GUI
            SOURCES
            gui/tst_MainFrame_Actions.cpp
            "${CMAKE_SOURCE_DIR}/src/helpers/MainFrameActionUtils.cpp"
            LABELS
            gui
            TIMEOUT
            20)

    qmud_add_qtest(tst_Dialog_WorldPreferences
            GUI
            SOURCES
            gui/tst_Dialog_WorldPreferences.cpp
            "${CMAKE_SOURCE_DIR}/src/helpers/WorldPreferencesRoutingUtils.cpp"
            LABELS
            gui
            TIMEOUT
            20)

    qmud_add_qtest(tst_WorldView_Basic
            GUI
            SOURCES
            gui/tst_WorldView_Basic.cpp
            "${CMAKE_SOURCE_DIR}/src/WorldView.cpp"
            "${CMAKE_SOURCE_DIR}/src/TelnetProcessor.cpp"
            "${CMAKE_SOURCE_DIR}/src/helpers/AnsiSgrParseUtils.cpp"
            "${CMAKE_SOURCE_DIR}/src/helpers/AccessibleTextUtils.cpp"
            "${CMAKE_SOURCE_DIR}/src/helpers/MiniWindowUtils.cpp"
            "${CMAKE_SOURCE_DIR}/src/helpers/OutputWrapUtils.cpp"
            "${CMAKE_SOURCE_DIR}/src/Environment.cpp"
            "${CMAKE_SOURCE_DIR}/src/helpers/TimeFormatUtils.cpp"
            "${CMAKE_SOURCE_DIR}/src/WorldView.h"
            "${CMAKE_SOURCE_DIR}/src/helpers/MainWindowHostResolver.cpp"
            "${CMAKE_SOURCE_DIR}/src/dialogs/FindDialog.cpp"
            LIBRARIES
            Qt6::Sql
            ${QMUD_ZLIB_TARGET}
            LABELS
            gui
            TIMEOUT
            120)
    target_compile_options(tst_WorldView_Basic PRIVATE -ffunction-sections -fdata-sections)
    target_link_options(tst_WorldView_Basic PRIVATE -Wl,--gc-sections)

    qmud_add_qtest(tst_Dialog_ImportXml
            GUI
            SOURCES
            gui/tst_Dialog_ImportXml.cpp
            "${CMAKE_SOURCE_DIR}/src/dialogs/ImportXmlDialog.cpp"
            "${CMAKE_SOURCE_DIR}/src/AppController.h"
            "${CMAKE_SOURCE_DIR}/src/dialogs/PluginsDialog.h"
            LIBRARIES
            Qt6::Sql
            LABELS
            gui
            TIMEOUT
            20)

    qmud_add_qtest(tst_Dialog_Plugins
            GUI
            SOURCES
            gui/tst_Dialog_Plugins.cpp
            "${CMAKE_SOURCE_DIR}/src/dialogs/PluginsDialog.cpp"
            "${CMAKE_SOURCE_DIR}/src/AppController.h"
            "${CMAKE_SOURCE_DIR}/src/WorldRuntime.h"
            LIBRARIES
            Qt6::Sql
            LABELS
            gui
            TIMEOUT
            20)

    qmud_add_qtest(tst_Dialog_PluginWizard
            GUI
            SOURCES
            gui/tst_Dialog_PluginWizard.cpp
            "${CMAKE_SOURCE_DIR}/src/dialogs/PluginWizardDialog.cpp"
            "${CMAKE_SOURCE_DIR}/src/AppController.h"
            "${CMAKE_SOURCE_DIR}/src/WorldRuntime.h"
            LIBRARIES
            Qt6::Sql
            LABELS
            gui
            TIMEOUT
            20)

    qmud_add_qtest(tst_Dialog_ColourPicker
            GUI
            SOURCES
            gui/tst_Dialog_ColourPicker.cpp
            "${CMAKE_SOURCE_DIR}/src/dialogs/ColourPickerDialog.cpp"
            LABELS
            gui
            TIMEOUT
            20)

    qmud_add_qtest(tst_Dialog_LogSession
            GUI
            SOURCES
            gui/tst_Dialog_LogSession.cpp
            "${CMAKE_SOURCE_DIR}/src/dialogs/LogSessionDialog.cpp"
            LABELS
            gui
            TIMEOUT
            20)

    qmud_add_qtest(tst_Dialog_GlobalPreferencesUpdates
            GUI
            SOURCES
            gui/tst_Dialog_GlobalPreferencesUpdates.cpp
            "${CMAKE_SOURCE_DIR}/src/dialogs/GlobalPreferencesDialog.cpp"
            "${CMAKE_SOURCE_DIR}/src/AppController.h"
            LIBRARIES
            Qt6::Sql
            ${QMUD_ZLIB_TARGET}
            LABELS
            gui
            TIMEOUT
            20)

    qmud_add_qtest(tst_MdiTabs
            GUI
            SOURCES
            gui/tst_MdiTabs.cpp
            "${CMAKE_SOURCE_DIR}/src/WorldChildWindow.h"
            "${CMAKE_SOURCE_DIR}/src/MdiTabs.cpp"
            LABELS
            gui
            TIMEOUT
            20)

    qmud_add_qtest(tst_TabActivationHistory
            GUI
            SOURCES
            gui/tst_TabActivationHistory.cpp
            "${CMAKE_SOURCE_DIR}/src/TabActivationHistory.cpp"
            LABELS
            gui
            TIMEOUT
            20)
endif ()
